--- a/index.html
+++ b/index.html
@@ -16,44 +16,47 @@
         <div class="container-fluid">
             <div class="row align-items-center text-center">
                 <div class="col">
-                    <img src="./assets/356-3568749_cute-kawaii-bunny-rabbit-carrot-chibi-animals-adorable.png" alt="logo">
+                    <img src="./assets/356-3568749_cute-kawaii-bunny-rabbit-carrot-chibi-animals-adorable.png"
+                        alt="logo">
                 </div>
                 <div class="col text-center">
-                    <h2>Lupi's Adventure</h2> <hr/>
-                    <h5>Ajude Lupi na luta por seu mundo, 
+                    <h2>Lupi's Adventure</h2>
+                    <hr />
+                    <h5>Ajude Lupi na luta por seu mundo,
                         pilote a Spacecarrot e atire cenouras explosivas!
                         <h5>
                 </div>
                 <div class="col text-center">
-                    <img src="./assets/356-3568749_cute-kawaii-bunny-rabbit-carrot-chibi-animals-adorable.png" alt="coelhinha-cenoura">
+                    <img src="./assets/356-3568749_cute-kawaii-bunny-rabbit-carrot-chibi-animals-adorable.png"
+                        alt="coelhinha-cenoura">
                 </div>
             </div>
-        </div><hr style="color: green; size: 0.3px"/>
-    </section> 
-    
-    
+        </div>
+        <hr style="color: green; size: 0.3px" />
+    </section>
+
+
 
     <section class="section-2">
         <div class="clearfix container-fluid">
-            <img src="./assets/imagem_flutuante.png"
-                class="col-md-6 float-md-end mb-3 ms-md-3" alt="coelhinho">
+            <img src="./assets/imagem_flutuante.png" class="col-md-6 float-md-end mb-3 ms-md-3" alt="coelhinho">
 
             <p>
                 Uma nova ameaça chegou para roubar a paz do planeta Lepus: detectaram a aproximação
-dos roedores inimigos nos anéis exteriores! 
+                dos roedores inimigos nos anéis exteriores!
             </p>
 
             <p>
                 Agora cabe aos capitães espaciais Lepurans
-embarcar em suas naves alaranjadas e destruir as bolas de queijo da nave mãe Muridae
-antes que elas entrem em contato com seu amado planeta produtor de cenouras e mudem
-a superfície gramada para um fedido, enorme e infértil deserto de queijo suíço!
+                embarcar em suas naves alaranjadas e destruir as bolas de queijo da nave mãe Muridae
+                antes que elas entrem em contato com seu amado planeta produtor de cenouras e mudem
+                a superfície gramada para um fedido, enorme e infértil deserto de queijo suíço!
 
             </p>
 
             <p>
                 Na pele da felpuda capitã Lupi, impeça a vitória dos ratos e o exílio dos leporinos habitantes
-desse planeta antes que seja tarde demais!
+                desse planeta antes que seja tarde demais!
             </p>
         </div>
     </section>
@@ -68,9 +71,10 @@ desse planeta antes que seja tarde demais!
                                 <div class="card" style="width: 100%; height: 100%;">
                                     <div class="card-body">
                                         <h5 class="card-title">Estilo de jogo</h5>
-                                        <hr/>
+                                        <hr />
                                         <p class="card-text">
-                                            <img src="./assets/spaceshooter.jpg" alt="spaceshooter" style="width: 80%; max-height: 8.5rem">
+                                            <img src="./assets/spaceshooter.jpg" alt="spaceshooter"
+                                                style="width: 80%; max-height: 8.5rem">
                                         </p>
                                     </div>
                                 </div>
@@ -78,7 +82,8 @@ desse planeta antes que seja tarde demais!
                         </div>
                         <div class="card-side back">
                             <div>
-                                <img src="https://docs.ctjs.rocks/assets/img/tutSpaceShooter_Result.2f9dc6e6.gif" alt="estilo de jogo" style="width: 100%; height: 12.8rem; padding: 0.01%;">
+                                <img src="https://docs.ctjs.rocks/assets/img/tutSpaceShooter_Result.2f9dc6e6.gif"
+                                    alt="estilo de jogo" style="width: 100%; height: 12.8rem; padding: 0.01%;">
                             </div>
                         </div>
                     </div>
@@ -90,9 +95,10 @@ desse planeta antes que seja tarde demais!
                                 <div class="card" style="width: 100%; height: 10rem;">
                                     <div class="card-body">
                                         <h5 class="card-title">Controles</h5>
-                                        <hr/>
+                                        <hr />
                                         <p class="card-text">
-                                            <img src="./assets/controles.png" alt="controle" style="width: 80%; max-height: 8.5rem">
+                                            <img src="./assets/controles.png" alt="controle"
+                                                style="width: 80%; max-height: 8.5rem">
                                         </p>
                                     </div>
                                 </div>
@@ -101,7 +107,8 @@ desse planeta antes que seja tarde demais!
                         <div class="card-side back">
                             <div>
                                 <p class="card-text" style="margin-bottom: 0;">Joystick & Teclado!</p>
-                                <img src="https://media2.giphy.com/media/94DBMnpVEbJLy/200.gif" alt="joystick-gif" style="width: 100%; height: 10rem; padding: 0.01%;">
+                                <img src="https://media2.giphy.com/media/94DBMnpVEbJLy/200.gif" alt="joystick-gif"
+                                    style="width: 100%; height: 10rem; padding: 0.01%;">
                             </div>
                         </div>
                     </div>
@@ -113,9 +120,10 @@ desse planeta antes que seja tarde demais!
                                 <div class="card">
                                     <div class="card-body">
                                         <h5 class="card-title">Não perca tempo!</h5>
-                                        <hr/>
+                                        <hr />
                                         <p class="card-text">
-                                            <img src="https://cms-assets.tutsplus.com/cdn-cgi/image/width=360/uploads/users/1112/posts/25730/image/animate-run-progress-04.gif" alt="corrida" style="width: 80%; max-height: 8.5rem">
+                                            <img src="https://cms-assets.tutsplus.com/cdn-cgi/image/width=360/uploads/users/1112/posts/25730/image/animate-run-progress-04.gif"
+                                                alt="corrida" style="width: 80%; max-height: 8.5rem">
                                         </p>
                                     </div>
                                 </div>
@@ -124,30 +132,31 @@ desse planeta antes que seja tarde demais!
                         <div class="card-side back">
                             <div>
                                 <p class="card-text">
-                                    Disponível para PC e Android! 
-                                </p> 
-                            </div><br/>
+                                    Disponível para PC e Android!
+                                </p>
+                            </div><br />
                             <div>
                                 <p>
                                     <a href="#" class="btn btn-outline-light">
-                                        <img src="./assets/start_button.png.crdownload" alt="botãodestart" style="width: 80%; max-height: 8.5rem">
+                                        <img src="./assets/start_button.png.crdownload" alt="botãodestart"
+                                            style="width: 80%; max-height: 8.5rem">
                                     </a>
                                 </p>
                             </div>
                             <br>
                             <div>
-                            <p class="card-text">
-                                Baixe agora mesmo! 
-                            </p>
+                                <p class="card-text">
+                                    Baixe agora mesmo!
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <section class="container-fluid section-4">
         <p>Acompanhe e apoie o projeto em: <a href="github.com">github.com</a></p>
-</section>
+    </section>
 
 
 
