adicionado um tooltip ao titulo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         alt="logo">
                 </div>
                 <div class="col text-center">
-                    <h2>Lupi's Adventure</h2>
+                    <h2 id="title" tooltip="Ajude Lupi na luta por seu mundo, pilote a Spacecarrot e atire cenouras explosivas!">Lupi's Adventure</h2>
                     <hr />
                     <h5>Ajude Lupi na luta por seu mundo,
                         pilote a Spacecarrot e atire cenouras explosivas!
